<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_article_text">
        <ListPreference
            android:key="articleSize"
            android:entries="@array/articleSize"
            android:entryValues="@array/articleSize_values"
            android:summary="@string/pref_article_text_summary"
            android:defaultValue="7"
            android:title="@string/pref_article_text_summary_title"/>
        <ListPreference
            android:key="textSize"
            android:entries="@array/textSize"
            android:entryValues="@array/textSize_values"
            android:summary="@string/pref_article_text_textsize"
            android:defaultValue="24"
            android:title="@string/pref_article_text_textsize_title"/>
        <Preference android:title="Logout"
            android:key="logoutButton"
            android:summary="Logs you Out"/>
    </PreferenceCategory>
</PreferenceScreen>