<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:style="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:background="@color/myPrimaryDarkColor">

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/sic"
        android:layout_marginBottom="32dp">

    </ImageView>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_sign_up"
        android:padding="15dp"
        android:textColor="#FFF"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:id="@+id/sign_up"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_text"
        android:textColor="@color/myPrimaryLightColor"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_log_in"
        android:padding="15dp"
        android:textColor="#FFF"
        style="?android:attr/borderlessButtonStyle"
        android:textSize="16sp"
        android:id="@+id/log_in"/>

</LinearLayout>